# example-lightning-kafka

client/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
server/src/data/: mod.rs  storage_data.rs
server/src/storage/: file_log_storage.rs  log_storage.rs  mod.rs
