[package]
name = "lightning-kafka-server"
version = "0.1.0"
edition = "2021"

# Говорим, что это bin (исполняемый файл)
[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"